<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>pt.arquivo</groupId>
   <artifactId>page-search</artifactId>
   <version>1.0.0-SNAPSHOT</version>

   <packaging>pom</packaging>
   <organization>
      <name>Arquivo.pt</name>
      <url>https://github.com/arquivo </url>
   </organization>
   <inceptionYear>2020</inceptionYear>

   <modules>
      <module>utils</module>
      <module>page-search-api</module>
   </modules>

   <licenses>
      <license>
         <name>The Apache Software License, Version 2.0</name>
         <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         <distribution>repo</distribution>
      </license>
      <license>
         <name>GNU General Public License Version 2</name>
         <url>http://www.gnu.org/copyleft/gpl.html</url>
         <distribution>repo</distribution>
      </license>
   </licenses>

   <issueManagement>
      <system>GitHub Issues</system>
      <url>https://github.com/arquivo/pwa-techonologies</url>
   </issueManagement>

   <scm>
      <connection>scm:git:git@github.com:arquivo/page-search.git</connection>
      <developerConnection>scm:git:git@github.com:arquivo/page-search.git</developerConnection>
      <url>git@github.com:arquivo/page-search.git</url>
      <tag>@{project.version}</tag>
   </scm>

   <properties>
      <maven.compiler.target>1.8</maven.compiler.target>
      <maven.compiler.source>1.8</maven.compiler.source>

      <encoding>UTF-8</encoding>
      <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>

      <webarchive.commons.version>1.1.9</webarchive.commons.version>
      <hadoop.version>3.2.1</hadoop.version>
   </properties>

   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-release-plugin</artifactId>
               <version>2.5.3</version>
               <configuration>
                  <goals>pre-integration-test</goals>
                  <preparationGoals>package</preparationGoals>
                  <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                  <tagNameFormat>@{project.version}</tagNameFormat>
                  <remoteTagging>false</remoteTagging>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.jacoco</groupId>
               <artifactId>jacoco-maven-plugin</artifactId>
               <version>0.8.5</version>
            </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                   <source>1.8</source>
                   <target>1.8</target>
                </configuration>
             </plugin>
         </plugins>
      </pluginManagement>
   </build>
</project>